--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Телефонная книжка</string>
     <string name="about_icon">About</string>
+    <string name="contact_name_id">TextView</string>
+    <string name="contact_number_id">TextView</string>
 </resources>
